--- a/src/app/components/layout/sidebar/sidebar.component.css
+++ b/src/app/components/layout/sidebar/sidebar.component.css
@@ -3,14 +3,32 @@
 .sidebar {
   width: 250px;
   height: calc(100vh - 56px);
-  background-color: #343a40;
-  color: white;
+  background-color: var(--gray-dark);
+  color: var(--white);
   position: fixed;
   top: 56px;
   left: 0;
-  padding: 15px;
   transition: transform 0.3s ease-in-out;
 }
+
+.sidebar ul li{
+  width: 100%;
+  padding: 5px 10px;
+}
+.sidebar ul li i{
+  margin-right: 5px;
+}
+
+.sidebar ul li:hover,
+.sidebar ul li.active{
+ background-color: var(--secondary);
+ transition: all 0.3s ease-in-out;
+}
+.sidebar ul li.active{
+  padding-left: 7px;
+  border-left: 3px solid var(--orange);
+}
+
 
 @media (min-width: 992px) {
   .sidebar {
@@ -21,7 +39,6 @@
     position: fixed;
   }
 }
-
 
 @media (max-width: 991px) {
   .sidebar {
