--- a/src/app/components/layout/navbar/navbar.component.html
+++ b/src/app/components/layout/navbar/navbar.component.html
@@ -1,11 +1,11 @@
-<nav class="navbar navbar-dark bg-dark fixed-top">
+<nav class="navbar bg-body-tertiary fixed-top">
   <div class="container-fluid">
       <div class="d-flex align-items-center gap-2">
-          <button class="btn text-light border-0" (click)="toggleSidebar.emit()">
-              ☰
+          <button class="btn text-light border-0 hamburger-toggler" (click)="toggleSidebar.emit()">
+              <i class="fa fa-bars"></i>
           </button>
           <a class="navbar-brand" href="#">
-              <img src="/favicon.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+              <img src="/favicon.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
               Cafe Management System
           </a>
       </div>
