--- a/src/app/components/layout/sidebar/sidebar.component.html
+++ b/src/app/components/layout/sidebar/sidebar.component.html
@@ -1,17 +1,29 @@
 <div class="sidebar" [ngClass]="{'show': isSidebarOpen}">
-  <h5 class="mb-4">Sidebar</h5>
+  <!-- <h5 class="mb-4">Sidebar</h5> -->
   <ul class="nav flex-column">
-      <li class="nav-item">
-          <a class="nav-link text-white" href="#">Dashboard</a>
+      <li class="nav-item active">
+          <a class="nav-link text-white" href="#">
+            <i class="fa fa-home"></i>
+            Dashboard
+          </a>
       </li>
       <li class="nav-item">
-          <a class="nav-link text-white" href="#">Profile</a>
+          <a class="nav-link text-white" href="#">
+            <i class="fa fa-user"></i>
+            Profile
+          </a>
       </li>
       <li class="nav-item">
-          <a class="nav-link text-white" href="#">Settings</a>
+          <a class="nav-link text-white" href="#">
+            <i class="fa fa-cog"></i>
+            Settings
+          </a>
       </li>
       <li class="nav-item">
-          <a class="nav-link text-white" href="#">Logout</a>
+          <a class="nav-link text-white" href="#">
+            <i class="fa fa-sign-out"></i>
+            Logout
+          </a>
       </li>
   </ul>
 </div>
