--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-navbar (toggleSidebar)="toggleSidebar()"></app-navbar>
-<app-sidebar [isSidebarOpen]="isSidebarOpen"></app-sidebar>
-<app-dashboard  [isSidebarOpen]="isSidebarOpen"></app-dashboard>
+
+
+<router-outlet></router-outlet>
