--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,20 +1,8 @@
 
 <div class="main-content p-4"  [ngClass]="{'sidebar-margin': isSidebarOpen}">
-  <h3>Analytics</h3>
-  <p>This is the main content area.</p>
+  <h3 class="main-title">Dashboard</h3>
+  <p class="sub-title">Analytics</p>
 
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore mollitia quis voluptatibus iure fugit at corporis, quae eaque itaque, alias dolorem nam maiores voluptate in placeat. Quibusdam atque necessitatibus repudiandae voluptatibus ratione rerum similique, a quo nihil illo amet corporis, nobis ipsum sunt officia soluta? Ipsa, reprehenderit quidem. Perspiciatis.
+  <app-analysis-cards></app-analysis-cards>
 
-  <div class="card bg-light p-3 mt-3">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim cupiditate praesentium ex molestias vitae dignissimos, consequatur expedita quod ipsam et sed laboriosam ea delectus vel rem. Voluptate harum unde maxime, veritatis quae vero qui! Ullam magnam est vitae consequatur saepe necessitatibus odit veritatis, hic ipsum labore voluptate nobis ab quam?
-  </div>
-  <div class="card bg-light p-3 mt-3">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim cupiditate praesentium ex molestias vitae dignissimos, consequatur expedita quod ipsam et sed laboriosam ea delectus vel rem. Voluptate harum unde maxime, veritatis quae vero qui! Ullam magnam est vitae consequatur saepe necessitatibus odit veritatis, hic ipsum labore voluptate nobis ab quam?
-  </div>
-  <div class="card bg-light p-3 mt-3">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim cupiditate praesentium ex molestias vitae dignissimos, consequatur expedita quod ipsam et sed laboriosam ea delectus vel rem. Voluptate harum unde maxime, veritatis quae vero qui! Ullam magnam est vitae consequatur saepe necessitatibus odit veritatis, hic ipsum labore voluptate nobis ab quam?
-  </div>
-  <div class="card bg-light p-3 mt-3">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim cupiditate praesentium ex molestias vitae dignissimos, consequatur expedita quod ipsam et sed laboriosam ea delectus vel rem. Voluptate harum unde maxime, veritatis quae vero qui! Ullam magnam est vitae consequatur saepe necessitatibus odit veritatis, hic ipsum labore voluptate nobis ab quam?
-  </div>
 </div>
