--- a/src/app/components/layout/sidebar/sidebar.component.html
+++ b/src/app/components/layout/sidebar/sidebar.component.html
@@ -9,18 +9,30 @@
       </li>
       <li class="nav-item">
           <a class="nav-link text-white" href="#">
-            <i class="fa fa-user"></i>
-            Profile
+            <i class="fa-solid fa-layer-group"></i>
+            Category
           </a>
       </li>
       <li class="nav-item">
           <a class="nav-link text-white" href="#">
-            <i class="fa fa-cog"></i>
-            Settings
+            <i class="fa-solid fa-box"></i>
+            Products
           </a>
       </li>
       <li class="nav-item">
           <a class="nav-link text-white" href="#">
+            <i class="fa-solid fa-users"></i>
+            Users
+          </a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link text-white" href="#">
+            <i class="fa-solid fa-money-check-dollar"></i>
+            Bill
+          </a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link text-soft-danger" href="#">
             <i class="fa fa-sign-out"></i>
             Logout
           </a>
