before routelink not working commit for backup

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,7 @@
 <app-navbar (toggleSidebar)="toggleSidebar()"></app-navbar>
 <app-sidebar [isSidebarOpen]="isSidebarOpen"></app-sidebar>
-<app-dashboard  [isSidebarOpen]="isSidebarOpen"></app-dashboard>
+
+
+<div class="main-content p-4  {{isSidebarOpen ? 'sidebar-margin' : ''}}">
+  <router-outlet></router-outlet>
+</div>
