--- a/src/app/components/dashboard/analysis-cards/analysis-cards.component.html
+++ b/src/app/components/dashboard/analysis-cards/analysis-cards.component.html
@@ -1,5 +1,5 @@
 
-<div class="row row-cols-1 row-cols-md-3 g-4">
+<div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
   <div class="col">
     <app-skew-shadow-card></app-skew-shadow-card>
   </div>
