--- a/src/app/components/layout/sidebar/sidebar.component.html
+++ b/src/app/components/layout/sidebar/sidebar.component.html
@@ -7,27 +7,27 @@
         </a>
 
       </li>
-      <li class="nav-item" [class.active]="isActive('/category')">
-        <a class="nav-link text-white" routerLink="/category">
+      <li class="nav-item" [class.active]="isActive('/categories')">
+        <a class="nav-link text-white" routerLink="/categories">
           <i class="fa-solid fa-layer-group"></i>
           Category
         </a>
       </li>
 
-      <li class="nav-item">
-          <a class="nav-link text-white" href="#">
+      <li class="nav-item"  [class.active]="isActive('/products')">
+          <a class="nav-link text-white" routerLink="/products">
             <i class="fa-solid fa-box"></i>
             Products
           </a>
       </li>
-      <li class="nav-item">
-          <a class="nav-link text-white" href="#">
+      <li class="nav-item" [class.active]="isActive('/users')">
+          <a class="nav-link text-white" routerLink="/users">
             <i class="fa-solid fa-users"></i>
             Users
           </a>
       </li>
-      <li class="nav-item">
-          <a class="nav-link text-white" href="#">
+      <li class="nav-item" [class.active]="isActive('/bills')">
+          <a class="nav-link text-white" routerLink="/bills">
             <i class="fa-solid fa-money-check-dollar"></i>
             Bill
           </a>
