--- a/src/app/components/layout/sidebar/sidebar.component.html
+++ b/src/app/components/layout/sidebar/sidebar.component.html
@@ -33,10 +33,10 @@
           </a>
       </li>
       <li class="nav-item">
-          <a class="nav-link text-soft-danger" href="#">
+          <button class="nav-link text-soft-danger" (click)="logout()">
             <i class="fa fa-sign-out"></i>
             Logout
-          </a>
+          </button>
       </li>
   </ul>
 </div>
