--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -13,19 +13,18 @@
               </div>
               <div class="w-100">
                 <p class="social-media d-flex justify-content-end">
-                  <a href="#" class="social-icon d-flex align-items-center justify-content-center"><span class="fab fa-google"></span></a>
-                  <a href="#" class="social-icon d-flex align-items-center justify-content-center"><span class="fab fa-facebook"></span></a>
+                  <a href="#" class="social-icon d-flex align-items-center justify-content-center fs-4 border-warning">🍊</a>
                 </p>
               </div>
             </div>
-            <form action="#" class="signin-form">
+            <form (submit)="login()" class="signin-form">
               <div class="form-group mb-3">
-                <label class="label" for="name">Username</label>
-                <input type="text" class="form-control" placeholder="Username" required>
+                <label class="label" for="email">Email</label>
+                <input type="text"  [(ngModel)]="email" name="email" class="form-control" placeholder="Enter email" id="email" required>
               </div>
               <div class="form-group mb-3">
                 <label class="label" for="password">Password</label>
-                <input type="password" class="form-control" placeholder="Password" required>
+                <input type="password" [(ngModel)]="password" name="password" class="form-control" id="password" placeholder="Enter password" required>
               </div>
               <div class="form-group">
                 <button type="submit" class="form-control btn btn-primary rounded submit px-3">Sign In</button>
