edit working | double backdrop problem pending

--- a/src/app/components/category/add-category/add-category.component.html
+++ b/src/app/components/category/add-category/add-category.component.html
@@ -1,30 +1,33 @@
-<button class="right-btn"  data-bs-toggle="modal" data-bs-target="#createCategoryModal">
+<button class="right-btn" data-bs-toggle="modal" data-bs-target="#createCategoryModal">
   <i class="fa-solid fa-plus"></i>
   Add Category</button>
 
-  <div class="modal fade" id="createCategoryModal" tabindex="-1" aria-labelledby="createCategoryModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <form (submit)="addCategory()" action="#" >
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="createCategoryModalLabel">Add Category</h1>
-            <button type="button" class="close mr-2" data-bs-dismiss="modal" aria-label="Close" fdprocessedid="1rb5pn"  #closeModalButton>
-              <i class="fa-solid fa-xmark"></i>
-            </button>
+  <div class="modal fade" id="createCategoryModal" tabindex="-1" aria-labelledby="createCategoryModalLabel">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form (submit)="submitCategory()" action="#">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="createCategoryModalLabel">
+            {{ mode === 'edit' ? 'Edit' : 'Add' }} Category
+          </h1>
+          <button type="button" class="close mr-2" data-bs-dismiss="modal" aria-label="Close" #closeModalButton>
+            <i class="fa-solid fa-xmark"></i>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="mb-3">
+            <label for="category-name" class="form-label">Category Name</label>
+            <input type="text" class="form-control" [(ngModel)]="name" name="name" id="category-name" #categoryNameInput
+              required />
           </div>
-          <div class="modal-body">
-
-              <div class="mb-3">
-                <label for="category-name" class="form-label">Category Name</label>
-                <input type="text" class="form-control" [(ngModel)]="name" value="{{ name }}" name="name" id="category-name" #categoryNameInput>
-              </div>
-
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button class="btn btn-primary" type="submit">Add Category</button>
-          </div>
-        </form>
-      </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button class="btn btn-primary" type="submit">
+            {{ mode === 'edit' ? 'Update' : 'Add' }} Category
+          </button>
+        </div>
+      </form>
     </div>
   </div>
+</div>
