--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -4,9 +4,9 @@
     <p class="sub-title">Category Management</p>
   </div>
 
- <div class="ms-auto">
-  <app-add-category  (categoryAdded)="onCategoryAdded()"></app-add-category>
- </div>
+  <div class="ms-auto">
+    <app-add-category (categoryAdded)="onCategoryAdded()" (categoryUpdated)="onCategoryUpdated()"></app-add-category>
+  </div>
 
 </div>
 
@@ -22,18 +22,18 @@
     </thead>
     <tbody>
       @for (category of categories; track category.id) {
-        <tr>
-          <td>{{ $index + 1 }}</td>
-          <td>{{ category['name'] }}</td>
-          <td>
-            <a href="#" class="btn action-btn btn-success">
-              <i class="fa-solid fa-pen-to-square"></i>
-            </a>
-            <button class="btn action-btn btn-danger" (click)="deleteCategory(category.id)">
-              <i class="fa-solid fa-trash"></i>
-            </button>
-          </td>
-        </tr>
+      <tr>
+        <td>{{ $index + 1 }}</td>
+        <td>{{ category['name'] }}</td>
+        <td>
+          <button class="btn action-btn btn-success" (click)="openEditModal(category)">
+            <i class="fa-solid fa-pen-to-square"></i>
+          </button>
+          <button class="btn action-btn btn-danger" (click)="deleteCategory(category.id)">
+            <i class="fa-solid fa-trash"></i>
+          </button>
+        </td>
+      </tr>
       }
     </tbody>
   </table>
