backdrop problem solved

--- a/src/app/components/category/add-category/add-category.component.html
+++ b/src/app/components/category/add-category/add-category.component.html
@@ -1,4 +1,4 @@
-<button class="right-btn" data-bs-toggle="modal" data-bs-target="#createCategoryModal">
+<button class="right-btn" (click)="openForAdd()">
   <i class="fa-solid fa-plus"></i>
   Add Category</button>
 
