completed product editing

--- a/src/app/components/category/add-category/add-category.component.html
+++ b/src/app/components/category/add-category/add-category.component.html
@@ -18,7 +18,7 @@
           <div class="mb-3">
             <label for="category-name" class="form-label">Category Name</label>
             <input type="text" class="form-control" [(ngModel)]="name" name="name" id="category-name"
-              #categoryNameInput="ngModel" required />
+            #categoryNameInput required />
 
           </div>
         </div>
