--- a/src/app/components/product/add-product/add-product.component.html
+++ b/src/app/components/product/add-product/add-product.component.html
@@ -19,7 +19,7 @@
               <label for="Product-name" class="form-label">Product Name</label>
               <div class="input-group mb-3">
                 <span class="input-group-text" id="product-name"> <i class="fa-solid fa-heading"></i> </span>
-                <input type="text"  [(ngModel)]="name" name="name" #productNameInput="ngModel" required class="form-control" placeholder="product name...">
+                <input type="text"  [(ngModel)]="name" name="name" #productNameInput required class="form-control" placeholder="product name...">
               </div>
             </div>
             <div class="mb-3">
